# pycognaize

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE.txt  README.md  dev-requirements.txt  model-requirements.txt  requirements.txt  setup.cfg  setup.py  setup.sh  test.sh  tox.ini
.github/workflows/: doctest.yml  flake8-lint.yml  fury-deploy.yaml  fury.yaml  pytest.yml  release.yml
docs/: create_docs.sh  requirements.txt
docs/source/: conf.py  index.rst  quickstart.rst  tutorials.rst  wordlist.txt
docs/source/API/: api.rst  genindex.rst  glossary.rst
docs/source/_templates/: versions.html
docs/source/quickstart/: installation.rst
docs/source/tutorials/: leveraging_tables.rst  quick_tutorial.rst  working_with_extraction_tags.rst  working_with_images.rst
pycognaize/: __init__.py  cli.py  clidriver.py  genie.py  index.py  local_genie.py  login.py  model.py
pycognaize/common/: classification_labels.py  cloud_interface.py  cloud_service.py  confidence.py  decorators.py  documenttext.py  enums.py  exceptions.py  field_collection.py  langchain_loader.py  lazy_dict.py  lazy_group_dict.py  numeric_parser.py  spangroup.py  table_utils.py  utils.py
pycognaize/document/: __init__.py  document.py  html_.py  html_info.py  page.py  page_typing.py  pdf.py  snapshot.py  snapshot_downloader.py
pycognaize/document/field/: __init__.py  area_field.py  area_field_pydantic.py  date_field.py  field.py  field_pydantic.py  link_field.py  numeric_field.py  section_field.py  span_field.py  spanfield.py  table_field.py  text_field.py
pycognaize/document/spanning/: character.py  line.py  word.py
pycognaize/document/tag/: cell.py  (+7 more)
pycognaize/file_storage/: __init__.py  local_storage.py  path_type_checker.py  s3_storage.py  storage.py
pycognaize/model_registry/: __init__.py  login.py  submit.py
pycognaize/tests/: model_registry.py  test_index.py  test_login.py  test_model.py
scripts/: create_badges.py
(+126 files in other folders)
