[metadata]
name = pycognaize
version = attr: pycognaize.__version__
author = cognaize
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/cognaize/pycognaize
requires-python = >=3.6

[options]
packages = find:
include_package_data = True
setup_requires =
    pytest-runner
tests_require =
    pytest
install_requires =
    pandas
    pymongo
    requests
    cloudstorageio
    simplejson
    numpy
    matplotlib
    dataclasses; python_version <= '3.6'
    seaborn
    opencv-python
    pymupdf==1.19.4

[options.packages.find]
exclude =
    pycognaize.temp.*
    pycognaize.temp
    pycognaize.tests.*
    pycognaize.tests

[options.package_data]
* = *.bson, *.json, *.rst, *.txt, *.md, *.jpeg
[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
python_files = pycognaize/tests/*.py
