[metadata]
name = pycognaize
version = attr: pycognaize.__version__
author = Cognaize
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/cognaize/pycognaize
requires-python = >=3.6

[options]
packages = find:
include_package_data = True
setup_requires =
    pytest-runner
tests_require =
    pytest
    seaborn
    opencv-python
install_requires =
    pandas
    numpy
    pymongo
    requests
    cloudstorageio
    simplejson
    pillow
    pymupdf==1.21.1
    urllib3
    lxml
    beautifulsoup4
    dataclasses; python_version <= '3.6'
    PyYAML
    click
    anytree
    tabulate


[options.packages.find]
exclude =
    pycognaize.temp.*
    pycognaize.temp
    pycognaize.tests.*
    pycognaize.tests

[options.package_data]
* = *.bson, *.json, *.rst, *.txt, *.md, *.jpeg
[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
python_files = pycognaize/tests/*.py
